syntax = "proto3";
package wormchain.wormhole;

import "wormchain/wormhole/guardian.proto";
import "wormchain/wormhole/config.proto";
import "wormchain/wormhole/replay_protection.proto";
import "wormchain/wormhole/sequence_counter.proto";
import "wormchain/wormhole/consensus_guardian_set_index.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/wormhole-foundation/wormchain/x/wormhole/types";

// GenesisState defines the wormhole module's genesis state.
message GenesisState {
  repeated GuardianSet guardianSetList = 1 [ (gogoproto.nullable) = false ];
  Config config = 2;
  repeated ReplayProtection replayProtectionList = 3
      [ (gogoproto.nullable) = false ];
  repeated SequenceCounter sequenceCounterList = 4
      [ (gogoproto.nullable) = false ];
  ConsensusGuardianSetIndex consensusGuardianSetIndex = 5;
  repeated GuardianValidator guardianValidatorList = 6
      [ (gogoproto.nullable) = false ];
  repeated ValidatorAllowedAddress allowedAddresses = 7
      [ (gogoproto.nullable) = false ];
  repeated WasmInstantiateAllowedContractCodeId wasmInstantiateAllowlist = 8
      [ (gogoproto.nullable) = false ];
  IbcComposabilityMwContract ibcComposabilityMwContract = 9
      [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
